--- a/AnotherSineMaps/app/src/main/AndroidManifest.xml
+++ b/AnotherSineMaps/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="activities.Splash"
+            android:name=".activities.Innit"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".entidades.Sine$MainActivity" />
+        <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.CityActivity" />
         <activity
             android:name=".activities.CityMapsActivity"
@@ -35,6 +35,7 @@
         <activity
             android:name=".activities.GpsActivity"
             android:label="@string/title_activity_gps"></activity>
+
     </application>
 
 </manifest>
